# forth_shell

./: .gitignore  CMakeLists.txt  LICENSE  README.md  words.ods
examples/interpreter/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/forth/: CMakeLists.txt  forth.c  forth.h  forth_core.c  forth_dict.c  forth_dict.h  forth_inter.c  forth_inter.h  forth_rodata.h
src/forth/forth_core/: README.md  forth_ariphmetic.c  forth_core.c  forth_logic.c  forth_rodata.h
src/vm/: CMakeLists.txt  vm.c  vm.h
tests/: CMakeLists.txt  forth_compile_tests.cpp  forth_dict_test.cpp  forth_interpret_tests.cpp  vm_test.cpp
